--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "body-parser": "^1.19.0",
     "colors": "^1.3.0",
     "compression": "^1.7.1",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "errorhandler": "^1.5.0",
-    "cors": "^2.8.4",
     "express": "^4.16.1",
     "express-fileupload": "^0.3.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "moment": "^2.27.0",
     "pg": "^8.2.1",
     "sha256": "^0.2.0",
-    "swagger-ui-express": "^4.0.7",
-    "jsonwebtoken": "^8.5.1"
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "chai": "^4.1.2",
